--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dnyv7wabr/image/upload/v1760604029/favicon_g5ltt3.png" />
+    <link rel="icon" type="image/svg+xml" href="public/assets/ficon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sawan Frontend Developer</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
