--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dm9sbfva5/image/upload/v1764320584/ficon_hhrz12.png" />
+    <link rel="icon" type="image/svg+xml" href="https://ik.imagekit.io/02x2rciof/ficon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sawan Frontend Developer</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
